fix jumping textbox

--- a/assets/base.css
+++ b/assets/base.css
@@ -1698,12 +1698,6 @@ details[open] > .share-button__fallback {
   padding: calc(var(--inputs-border-width) + 2.2rem) 1.5rem calc(var(--inputs-border-width) + 0.8rem);
 }
 
-.field:not(.cart__note) .field__input.text-area:focus,
-.field:not(.cart__note) .field__input.text-area:not(:placeholder-shown),
-.field:not(.cart__note) .field__input.text-area:-webkit-autofill {
-  padding-top: 4rem;
-}
-
 .field__input::-webkit-search-cancel-button,
 .customer .field input::-webkit-search-cancel-button {
   display: none;
@@ -1748,7 +1742,6 @@ details[open] > .share-button__fallback {
   font-family: var(--font-body-family);
   font-style: var(--font-body-style);
   font-weight: var(--font-body-weight);
-  padding: 1.2rem;
   min-height: 10rem;
   resize: none;
 }
